# showme

./: .coveragerc  .gitignore  .swp  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  a.sh  pyproject.toml  rc.sh  setup.cfg  setup.py
docs/: conf.py  index.rst
src/showme/: __init__.py  skeleton.py  version.py
tests/: conftest.py  test_skeleton.py
