[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=65.6.0", "setuptools_scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
## For smarter version schemes and other configuration options,
## check out https://github.com/pypa/setuptools_scm
#version_scheme = "release-branch-semver"
##version_scheme = "no-guess-dev"
#local_scheme="no-local-version"
#write_to = "src/showme/version.py"

#[tool.setuptools.dynamic]
#version = {attr = "showme.__version__"}


[project]
name = "showme"
description = "My package description"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["one", "two"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]

dynamic = ["version", "authors", "urls"]

# isort configuration required to ensure compatibility with black
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
